--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -5738,7 +5738,7 @@ fieldset:disabled .btn {
 .card-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  background-color: #fff;
+  /* background-color: #fff; */
   border-bottom: 0 solid rgba(0, 0, 0, 0.125);
 }
 
